--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "deploy": "gh-pages -d dist",
+  "deploy": "gh-pages -d docs",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
